# miku

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mascot3d/: .gitignore  main.js  package-lock.json  package.json  preload.js
mascot3d/renderer/: index.html
mascot3d/renderer/src/: animator.js  app.js  gaze.js  interact.js  rig.js  states.js
scripts/: fetch_miku_vrm.py  render_mascot.py  spike_rvc_benchmark.py
src/friday/: __init__.py  assistant.py  autostart.py  config.py  logging_setup.py  main.py  overlay.py  service.py  speech.py  tray.py  vad.py  voice_loop.py  wakeword.py
src/friday/audio/: __init__.py  capture.py  playback.py
src/friday/llm/: __init__.py  base.py  chunker.py  openrouter_llm.py
src/friday/prompts/: system.txt
src/friday/skills/: __init__.py  basic.py  google_apis.py  productivity.py  registry.py  system_control.py  timers.py  web_search.py
src/friday/stt/: __init__.py  base.py  faster_whisper_stt.py
src/friday/tts/: __init__.py  _spaces.py  base.py  caching.py  edge_tts.py  gpt_sovits.py  mikutts_space.py  piper_tts.py  sapi_tts.py
tests/: test_assistant_history.py  test_chunker.py  test_registry.py  test_speech_first_fast.py  test_tts_cache_tag.py  test_wake_phrase.py
