[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "friday"
version = "0.1.0"
description = "FRIDAY — a Tony-Stark-style voice assistant that speaks with Hatsune Miku's voice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Phase 1+ audio stack (installed later; kept optional so Phase 0 stays lightweight)
voice = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "soundfile>=0.12",
]
# Phase 3 speech-in
stt = [
    "faster-whisper>=1.0",
    "openwakeword>=0.6",
    "silero-vad>=5.1",
]
# Cloud Miku voice conversion client
miku = [
    "gradio_client>=1.3",
]
skills = [
    "ddgs>=6.0",
    "AppOpener>=1.7",
    "pycaw>=20240210",
    "comtypes>=1.4",
]

[project.scripts]
friday = "friday.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
friday = ["prompts/*.txt"]
